<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/draw"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioGroup
                android:id="@+id/rgDraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbDrawOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/draw_one" />

                <RadioButton
                    android:id="@+id/rbDrawThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/draw_three" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/sound"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <CheckBox
                android:id="@+id/cbPlaySound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_sound" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/appearance"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RadioGroup
                android:id="@+id/rgAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green" />

                <RadioButton
                    android:id="@+id/rbBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/blue" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</LinearLayout>